audio spacing fix

--- a/css/about.css
+++ b/css/about.css
@@ -83,7 +83,8 @@ body{
     }
     
     .audio{
-        
+        display:block;
+        margin:0 auto;
     }
     .column3{
         width:28%;
